--- a/src/components/Menu.css
+++ b/src/components/Menu.css
@@ -15,6 +15,17 @@
     transition: transform 200ms linear;
 }
 
+.location-list {
+    padding: 0;
+}
+
+.location-list li {
+    list-style: none;
+    color: white;
+    padding: 20px 15px;
+    border-bottom: 1px dotted #1eb8e8;
+}
+
 /* for revealing the menu
 .side-menu-open {
     transform: translateX(0);
