Updated infowindow contents

--- a/src/components/InfoWindow.css
+++ b/src/components/InfoWindow.css
@@ -76,3 +76,8 @@
 .infowindow-parent div:nth-child(even) {
     display: none;
 }
+
+button .gm-ui-hover-effect {
+    width: 40px;
+    height: 40px;
+}
